[gd_scene load_steps=8 format=1]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Fundos/fundo_menu.png" type="Texture" id=2]
[ext_resource path="res://Musicas/Menu/Niicaragua (Jerry Goldsmith ft. Pat Metheny).ogg" type="AudioStream" id=3]

[sub_resource type="DynamicFontData" id=1]

font_path = "res://Fontes/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=2]

font/size = 80
extra_spacing/char = 8
font/use_mipmaps = false
font/use_filter = true
font/font = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]

font_path = "res://Fontes/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=4]

font/size = 50
font/use_mipmaps = false
font/use_filter = true
font/font = SubResource( 3 )

[node name="Menu" type="Container"]

editor/display_folded = true
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 917.0
margin/bottom = 560.0
script/script = ExtResource( 1 )

[node name="Fundo" type="TextureFrame" parent="."]

visibility/behind_parent = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1032.0
margin/bottom = 600.0
texture = ExtResource( 2 )
modulate = Color( 0.449219, 0.443954, 0.443954, 1 )
stretch_mode = 0

[node name="LogoItens" type="VBoxContainer" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 0.0
margin/right = 1032.0
margin/bottom = 600.0
alignment = 0

[node name="Logo" type="HBoxContainer" parent="LogoItens"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 164.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="LogoItens/Logo"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 133.0
margin/top = 0.0
margin/right = 891.0
margin/bottom = 164.0
alignment = 0

[node name="Label" type="Label" parent="LogoItens/Logo/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 758.0
margin/bottom = 96.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.605133, 0.980469, 0.866109, 1 )
custom_colors/font_color_shadow = Color( 1, 0.00390625, 0.00390625, 1 )
text = "Pandemic Wars"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Itens" type="VBoxContainer" parent="LogoItens"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 168.0
margin/right = 1024.0
margin/bottom = 432.0
alignment = 0

[node name="Novo Jogo" type="HBoxContainer" parent="LogoItens/Itens"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 60.0
alignment = 0

[node name="Label" type="Label" parent="LogoItens/Itens/Novo Jogo"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 510.0
margin/bottom = 60.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0.875, 0.444336, 0.444336, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 2
text = "Novo Jogo"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Container" type="Container" parent="LogoItens/Itens/Novo Jogo"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 514.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 60.0

[node name="Container 2" type="Container" parent="LogoItens/Itens"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 64.0
margin/right = 1024.0
margin/bottom = 64.0

[node name="Dificuldade" type="HBoxContainer" parent="LogoItens/Itens"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 68.0
margin/right = 1024.0
margin/bottom = 128.0
alignment = 0

[node name="Label" type="Label" parent="LogoItens/Itens/Dificuldade"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 510.0
margin/bottom = 60.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0.875, 0.444336, 0.444336, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 2
text = "Dificuldade"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Container" type="Container" parent="LogoItens/Itens/Dificuldade"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 514.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 60.0

[node name="Container4" type="Container" parent="LogoItens/Itens"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 132.0
margin/right = 1024.0
margin/bottom = 132.0

[node name="Desenvolvedores" type="HBoxContainer" parent="LogoItens/Itens"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 136.0
margin/right = 1024.0
margin/bottom = 196.0
alignment = 0

[node name="Label" type="Label" parent="LogoItens/Itens/Desenvolvedores"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 510.0
margin/bottom = 60.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0.875, 0.444336, 0.444336, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 2
text = "Desenvolvedores"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Container" type="Container" parent="LogoItens/Itens/Desenvolvedores"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 514.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 60.0

[node name="Container3" type="Container" parent="LogoItens/Itens"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 200.0
margin/right = 1024.0
margin/bottom = 200.0

[node name="Sair" type="HBoxContainer" parent="LogoItens/Itens"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 204.0
margin/right = 1024.0
margin/bottom = 264.0
alignment = 0

[node name="Label" type="Label" parent="LogoItens/Itens/Sair"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 510.0
margin/bottom = 60.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0.875, 0.444336, 0.444336, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 2
text = "Sair do Jogo"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Container" type="Container" parent="LogoItens/Itens/Sair"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 514.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 60.0

[node name="Container" type="Container" parent="LogoItens"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 436.0
margin/right = 1024.0
margin/bottom = 600.0

[node name="Desenvolvedores" type="VBoxContainer" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 50.0
margin/right = 1032.0
margin/bottom = 462.0
alignment = 0

[node name="Edu" type="HBoxContainer" parent="Desenvolvedores"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 48.0
alignment = 0

[node name="Label" type="Label" parent="Desenvolvedores/Edu"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 48.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0.875, 0.444336, 0.444336, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 2
text = "Eduardo Linaro de Oliveira"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Bruno" type="HBoxContainer" parent="Desenvolvedores"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 52.0
margin/right = 1024.0
margin/bottom = 100.0
alignment = 0

[node name="Label" type="Label" parent="Desenvolvedores/Bruno"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 48.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0.875, 0.444336, 0.444336, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 2
text = "Bruno Henrique Alves Nunes"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Joao" type="HBoxContainer" parent="Desenvolvedores"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 104.0
margin/right = 1024.0
margin/bottom = 152.0
alignment = 0

[node name="Label" type="Label" parent="Desenvolvedores/Joao"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 48.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0.875, 0.444336, 0.444336, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 2
text = "João Arcanjo de Almeida Lopes Neto"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Nicoly" type="HBoxContainer" parent="Desenvolvedores"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 156.0
margin/right = 1024.0
margin/bottom = 204.0
alignment = 0

[node name="Label" type="Label" parent="Desenvolvedores/Nicoly"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 48.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0.875, 0.444336, 0.444336, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 2
text = "Nicoly Viana da Silva"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Caio" type="HBoxContainer" parent="Desenvolvedores"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 208.0
margin/right = 1024.0
margin/bottom = 256.0
alignment = 0

[node name="Label" type="Label" parent="Desenvolvedores/Caio"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 48.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0.875, 0.444336, 0.444336, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 2
text = "Caio Ribeiro de Souza"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Thiago" type="HBoxContainer" parent="Desenvolvedores"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 260.0
margin/right = 1024.0
margin/bottom = 308.0
alignment = 0

[node name="Label" type="Label" parent="Desenvolvedores/Thiago"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 48.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0.875, 0.444336, 0.444336, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 2
text = "Thiago Silva Marin"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Voltar" type="HBoxContainer" parent="Desenvolvedores"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 312.0
margin/right = 1024.0
margin/bottom = 360.0
alignment = 0

[node name="Label" type="Label" parent="Desenvolvedores/Voltar"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 48.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0.875, 0.444336, 0.444336, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 2
text = "<- Voltar"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Dificuldade" type="VBoxContainer" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 100.0
margin/right = 1032.0
margin/bottom = 462.0
alignment = 0

[node name="Facil" type="HBoxContainer" parent="Dificuldade"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 60.0
alignment = 0

[node name="Label" type="Label" parent="Dificuldade/Facil"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 60.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.875, 0.444336, 0.444336, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 2
text = "Fácil"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Medio" type="HBoxContainer" parent="Dificuldade"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 64.0
margin/right = 1024.0
margin/bottom = 124.0
alignment = 0

[node name="Label" type="Label" parent="Dificuldade/Medio"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 60.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0.875, 0.444336, 0.444336, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 2
text = "Médio"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Dificil" type="HBoxContainer" parent="Dificuldade"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 128.0
margin/right = 1024.0
margin/bottom = 188.0
alignment = 0

[node name="Label" type="Label" parent="Dificuldade/Dificil"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 60.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0.875, 0.444336, 0.444336, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 2
text = "Difícil"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Voltar" type="HBoxContainer" parent="Dificuldade"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 192.0
margin/right = 1024.0
margin/bottom = 252.0
alignment = 0

[node name="Label" type="Label" parent="Dificuldade/Voltar"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 60.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0.875, 0.444336, 0.444336, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 2
text = "<- Voltar"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 3 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 2.0
stream/buffering_ms = 500

[connection signal="input_event" from="LogoItens/Itens/Novo Jogo" to="." method="_on_NJ_input_event"]

[connection signal="mouse_enter" from="LogoItens/Itens/Novo Jogo" to="." method="_on_NJ_mouse_enter"]

[connection signal="mouse_exit" from="LogoItens/Itens/Novo Jogo" to="." method="_on_NJ_mouse_exit"]

[connection signal="input_event" from="LogoItens/Itens/Dificuldade" to="." method="_on_Difi_input_event"]

[connection signal="mouse_enter" from="LogoItens/Itens/Dificuldade" to="." method="_on_Difi_mouse_enter"]

[connection signal="mouse_exit" from="LogoItens/Itens/Dificuldade" to="." method="_on_Difi_mouse_exit"]

[connection signal="input_event" from="LogoItens/Itens/Desenvolvedores" to="." method="_on_D_input_event"]

[connection signal="mouse_enter" from="LogoItens/Itens/Desenvolvedores" to="." method="_on_D_mouse_enter"]

[connection signal="mouse_exit" from="LogoItens/Itens/Desenvolvedores" to="." method="_on_D_mouse_exit"]

[connection signal="input_event" from="LogoItens/Itens/Sair" to="." method="_on_S_input_event"]

[connection signal="mouse_enter" from="LogoItens/Itens/Sair" to="." method="_on_S_mouse_enter"]

[connection signal="mouse_exit" from="LogoItens/Itens/Sair" to="." method="_on_S_mouse_exit"]

[connection signal="input_event" from="Desenvolvedores/Voltar" to="." method="_on_V_input_event"]

[connection signal="mouse_enter" from="Desenvolvedores/Voltar" to="." method="_on_V_mouse_enter"]

[connection signal="mouse_exit" from="Desenvolvedores/Voltar" to="." method="_on_V_mouse_exit"]

[connection signal="input_event" from="Dificuldade/Facil" to="." method="_on_F_input_event"]

[connection signal="mouse_enter" from="Dificuldade/Facil" to="." method="_on_F_mouse_enter"]

[connection signal="mouse_exit" from="Dificuldade/Facil" to="." method="_on_F_mouse_exit"]

[connection signal="input_event" from="Dificuldade/Medio" to="." method="_on_M_input_event"]

[connection signal="mouse_enter" from="Dificuldade/Medio" to="." method="_on_M_mouse_enter"]

[connection signal="mouse_exit" from="Dificuldade/Medio" to="." method="_on_M_mouse_exit"]

[connection signal="input_event" from="Dificuldade/Dificil" to="." method="_on_Dl_input_event"]

[connection signal="mouse_enter" from="Dificuldade/Dificil" to="." method="_on_Dl_mouse_enter"]

[connection signal="mouse_exit" from="Dificuldade/Dificil" to="." method="_on_Dl_mouse_exit"]

[connection signal="input_event" from="Dificuldade/Voltar" to="." method="_on_Vdifi_input_event"]

[connection signal="mouse_enter" from="Dificuldade/Voltar" to="." method="_on_Vdifi_mouse_enter"]

[connection signal="mouse_exit" from="Dificuldade/Voltar" to="." method="_on_Vdifi_mouse_exit"]


